<?xml version="1.0"?>
<package format="2">
  <name>mesh_to_grid_map</name>
  <version>0.0.0</version>
  <description>
    Packages for converting meshes to grid maps.
  </description>
  <url></url>
  <author>Alex Millane</author>
  <maintainer email="alex.millane@gmail.com">Alex Millane</maintainer>
  <license>New BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies. -->
  <depend>eigen</depend>
  <depend>cmake_modules</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_pcl</depend>
  <depend>grid_map_ros</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>

</package>
